# anki_swiss_knife

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  pyproject.toml  ubuntu_dependencies.sh
.github/workflows/: ci.yml  python-app.yml  test.yml
anki_swiss_knife/: anki_chinese_card_builder.py  chinese_csv_generator.py  config_manager.py  csv_generator.py  google_docs.py  google_docs_document_reader.py  language_extractors.py  main.py  text_to_speech.py  translation.py
anki_swiss_knife/anki/: anki_card.py  card_with_speech.py
anki_swiss_knife/constants/: base.py  configs.py  file_paths.py  languages.py
anki_swiss_knife/helper/: configs.py  credentials.py  csv.py  files.py  ini_file.py
anki_swiss_knife/integration_fluentu/: fluentu_interactor.py
anki_swiss_knife/language_validator/: base_character_validator.py  base_validator.py  chinese_characters_validator.py  chinese_validator.py
docs/source/: conf.py  index.rst
tests/: conftest.py  test_anki_chinese_card_builder.py  test_anki_swiss_knife.py  test_chinese_characters_validator.py  test_chinese_csv_generator.py  test_csv_generator.py  test_google_docs.py  test_googledocs_to_anki.py  test_language_extractor.py  test_main.py  test_text_to_speech.py
tests/test_helper/: test_configs.py  test_csv.py  test_files.py
tests/test_integration_fluentu/: test_fluentu_interactor.py
