[tool.poetry]
name = "anki_swiss_knife"
version = "0.1.0"
description = ""
authors = ["Jeff Labonte <grimsleepless@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.46.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
boto3 = "^1.22.8"
progressbar2 = "^4.0.0"
xpinyin = "^0.7.6"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
polyglot = "^16.7.4"
PyICU = "^2.9"
Morfessor = "^2.0.6"
numpy = "^1.22.3"
pycld2 = "^0.41"
selenium = "^4.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3"
pre-commit = "^2.19.0"
neovim = "^0.3.1"
pylint = "^2.13.8"
pytest-testdox = "^3.0.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
bandit = "^1.7.4"
Sphinx = "^4.5.0"
pyfakefs = "^4.5.6"
rope = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38",]
include = '\.pyi?$'
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black" 
multi_line_output = 3

[tool.pyright]
python.analysis.autoImportCompletions = true
