[tool.poetry]
name = "anki_swiss_knife"
version = "0.1.0"
description = ""
authors = ["Jeff Labonte <grimsleepless@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.53.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"
boto3 = "^1.24.32"
progressbar2 = "^4.0.0"
xpinyin = "^0.7.6"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
polyglot = "^16.7.4"
PyICU = "^2.9"
Morfessor = "^2.0.6"
numpy = "^1.23.1"
pycld2 = "^0.41"
selenium = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.6"
pre-commit = "^2.20.0"
neovim = "^0.3.1"
pylint = "^2.14.4"
pytest-testdox = "^3.0.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
bandit = "^1.7.4"
Sphinx = "^5.0.2"
pyfakefs = "^4.6.2"
rope = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38",]
include = '\.pyi?$'
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black" 
multi_line_output = 3

[tool.pyright]
python.analysis.autoImportCompletions = true
